tests/semantic_errors/err08_const_double_assign.java
public class Error08 {
    public static void main(String[] args) {
        final double pi;
        pi = 3.14;
        pi = 3.14159; // Error: Cannot assign to constant variable
    }
}
